# patchwitness

./: .gitignore  CONTRIBUTING.md  DCO  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: local_demo.py  preview-run-input.json  preview-task.json
src/patchwitness/: __init__.py  __main__.py  cli.py  core.py  demo.py  executor.py
tests/: test_core.py
