[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "patchwitness"
version = "0.0.1"
description = "Executable evidence preview for pull request review"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "PatchWitness contributors" }
]
keywords = [
  "pull-request",
  "evidence",
  "testing",
  "coding-agents",
  "open-source"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
patchwitness = "patchwitness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
